force-app/main/default/objects/Benchmark__c/fields/Ex_G_Governing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Ex_G_Governing_Structure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Governing structure: Organization or program has a board of directors or advisory committee.</description>
    <inlineHelpText>Governing structure: Organization or program has a board of directors or advisory committee.</inlineHelpText>
    <label>Ex-G Governing Structure</label>
    <type>Checkbox</type>
</CustomField>