force-app/main/default/objects/Benchmark__c/fields/Ex_G_Member_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Ex_G_Member_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All organizations sign a NDBN member agreement which conveys our shared values and commitments to our communities and other members.</description>
    <inlineHelpText>All organizations sign a NDBN member agreement which conveys our shared values and commitments to our communities and other members.</inlineHelpText>
    <label>Ex-G Member Agreement</label>
    <type>Checkbox</type>
</CustomField>