force-app/main/default/objects/Benchmark__c/fields/Ex_G_Mission_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Ex_G_Mission_Alignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Member organization’s mission statement aligns with NDBN’s mission.</description>
    <inlineHelpText>Member organization’s mission statement aligns with NDBN’s mission.</inlineHelpText>
    <label>Ex-G Mission Alignment</label>
    <type>Checkbox</type>
</CustomField>