force-app/main/default/objects/Benchmark__c/fields/Ex_G_Nonprofit_Status__c.field-meta.xml
<CustomField>
    <fullName>Ex_G_Nonprofit_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nonprofit status: Members must be 501c3 nonprofits, fiscally sponsored by a 501c3 nonprofit, or a program run by a church in good standing as determined by the IRS.</description>
    <inlineHelpText>Nonprofit status: Members must be 501c3 nonprofits, fiscally sponsored by a 501c3 nonprofit, or a program run by a church in good standing as determined by the IRS.</inlineHelpText>
    <label>Ex-G Nonprofit Status</label>
    <type>Checkbox</type>
</CustomField>