force-app/main/default/objects/Benchmark__c/fields/Ex_G_Strategic_Planning__c.field-meta.xml
<CustomField>
    <fullName>Ex_G_Strategic_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leadership has begun a strategic planning process (at least a draft, SMART goals, or logic model).</description>
    <inlineHelpText>Leadership has begun a strategic planning process (at least a draft, SMART goals, or logic model).</inlineHelpText>
    <label>Ex-G Strategic Planning</label>
    <type>Checkbox</type>
</CustomField>