force-app/main/default/objects/Benchmark__c/fields/Ex_GOV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ex_GOV_To_Do__c</fullName>
    <description>Number of Exploring-Level Governance Benchmarks (of 5) Not Yet Demonstrated</description>
    <formula>5 - (IF(Ex_G_Governing_Structure__c, 1, 0) +
IF(Ex_G_Member_Agreement__c, 1, 0) +
IF(Ex_G_Mission_Alignment__c, 1, 0) +
IF(Ex_G_Nonprofit_Status__c, 1, 0) +
IF(Ex_G_Strategic_Planning__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Exploring-Level Governance Benchmarks Not Yet Demonstrated</inlineHelpText>
    <label>Ex GOV To-Do (5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>