force-app/main/default/objects/Benchmark__c/fields/Ex_O_20_Undup_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Ex_O_20_Undup_Individuals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Minimum of 20 unduplicated individuals are served monthly.</description>
    <inlineHelpText>Minimum of 20 unduplicated individuals are served monthly.</inlineHelpText>
    <label>Ex-O 20 Undup Individuals</label>
    <type>Checkbox</type>
</CustomField>