force-app/main/default/objects/Benchmark__c/fields/Ex_O_Inventory_System__c.field-meta.xml
<CustomField>
    <fullName>Ex_O_Inventory_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Basic inventory system is operational to account for receipt and distribution of diapers and other items.</description>
    <inlineHelpText>Basic inventory system is operational to account for receipt and distribution of diapers and other items.</inlineHelpText>
    <label>Ex-O Inventory System</label>
    <type>Checkbox</type>
</CustomField>