force-app/main/default/objects/Benchmark__c/fields/Ex_O_Operation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Ex_O_Operation_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Basic operations plan describes the process for working with recipient clients or agencies and demonstrates program alignment with your organization’s mission and goal.</description>
    <inlineHelpText>Basic operations plan describes the process for working with recipient clients or agencies and demonstrates program alignment with your organization’s mission and goal.</inlineHelpText>
    <label>Ex-O Operation Plan</label>
    <type>Checkbox</type>
</CustomField>