force-app/main/default/objects/Benchmark__c/fields/Ex_O_Set_Process_to_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Ex_O_Set_Process_to_Enroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Method has been established for collecting and reporting data from recipient individuals and agencies. Direct service providers have application or intake form other than sign-in sheet. Partner Agencies have application/agreement.</description>
    <inlineHelpText>Method has been established for collecting and reporting data from recipient individuals and agencies. Direct service providers have application or intake form other than sign-in sheet. Partner Agencies have application/agreement.</inlineHelpText>
    <label>Ex-O Set Process to Enroll</label>
    <type>Checkbox</type>
</CustomField>