force-app/main/default/objects/Benchmark__c/fields/Ex_O_Storage_Space__c.field-meta.xml
<CustomField>
    <fullName>Ex_O_Storage_Space__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adequate storage space exclusively for diapers is dry and secure.</description>
    <inlineHelpText>Adequate storage space exclusively for diapers is dry and secure.</inlineHelpText>
    <label>Ex-O Storage Space</label>
    <type>Checkbox</type>
</CustomField>