force-app/main/default/objects/Benchmark__c/fields/Ex_OPS_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Ex_OPS_To_Do__c</fullName>
    <description>Number of Exploring-Level Operations Benchmarks (of 5) Not Yet Demonstrated</description>
    <formula>5 - (IF(Ex_O_20_Undup_Individuals__c, 1, 0) +
IF(Ex_O_Set_Process_to_Enroll__c, 1, 0) +
IF(Ex_O_Inventory_System__c, 1, 0) +
IF(Ex_O_Operation_Plan__c, 1, 0) +
IF(Ex_O_Storage_Space__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Exploring-Level Operations Benchmarks (of 5) Not Yet Demonstrated</inlineHelpText>
    <label>Ex OPS To-Do (5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>