force-app/main/default/objects/Benchmark__c/fields/Form_1_GOV_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_1_GOV_Comments__c</fullName>
    <description>Comments from most recent Form 1 GOV (Leadership &amp; Organization Benchmarks)</description>
    <inlineHelpText>Comments from most recent Form 1 GOV (Leadership &amp; Organization Benchmarks)</inlineHelpText>
    <label>Form 1 GOV Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>