force-app/main/default/objects/Benchmark__c/fields/Form_1_GOV_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_1_GOV_Date__c</fullName>
    <description>Submit date of most recent Form 1 GOV (Leadership &amp; Organization Benchmarks)</description>
    <inlineHelpText>Submit date of most recent Form 1 GOV (Leadership &amp; Organization Benchmarks)</inlineHelpText>
    <label>Form 1 GOV Date</label>
    <type>Date</type>
</CustomField>