force-app/main/default/objects/Benchmark__c/fields/Form_1_GOV_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_1_GOV_URL__c</fullName>
    <description>FormAssembly Link for most recent Form 1 GOV (Leadership &amp; Organization Benchmarks)</description>
    <inlineHelpText>FormAssembly Link for most recent Form 1 GOV (Leadership &amp; Organization Benchmarks)</inlineHelpText>
    <label>Form 1 GOV URL</label>
    <type>Url</type>
</CustomField>