force-app/main/default/objects/Benchmark__c/fields/Form_2_OPS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_2_OPS_Comments__c</fullName>
    <description>Comments from most recent Form 2 OPS (Programs &amp; Operations Benchmarks)</description>
    <inlineHelpText>Comments from most recent Form 2 OPS (Programs &amp; Operations Benchmarks)</inlineHelpText>
    <label>Form 2 OPS Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>