force-app/main/default/objects/Benchmark__c/fields/Form_2_OPS_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_2_OPS_Date__c</fullName>
    <description>Submit date of most recent Form 2 OPS (Programs &amp; Operations Benchmarks)</description>
    <inlineHelpText>Submit date of most recent Form 2 OPS (Programs &amp; Operations Benchmarks)</inlineHelpText>
    <label>Form 2 OPS Date</label>
    <type>Date</type>
</CustomField>