force-app/main/default/objects/Benchmark__c/fields/Form_2_OPS_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_2_OPS_URL__c</fullName>
    <description>FormAssembly Link for most recent Form 2 OPS (Programs &amp; Operations Benchmarks)</description>
    <inlineHelpText>FormAssembly Link for most recent Form 2 OPS (Programs &amp; Operations Benchmarks)</inlineHelpText>
    <label>Form 2 OPS URL</label>
    <type>Url</type>
</CustomField>