force-app/main/default/objects/Benchmark__c/fields/Form_3_FUN_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_3_FUN_Comments__c</fullName>
    <description>Comments from most recent Form 3 FUN (Fundraising &amp; Finance Benchmarks)</description>
    <inlineHelpText>Comments from most recent Form 3 FUN (Fundraising &amp; Finance Benchmarks)</inlineHelpText>
    <label>Form 3 FUN Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>