force-app/main/default/objects/Benchmark__c/fields/Form_3_FUN_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_3_FUN_Date__c</fullName>
    <description>Submit date of most recent Form 3 FUN (Fundraising &amp; Finance Benchmarks)</description>
    <inlineHelpText>Submit date of most recent Form 3 FUN (Fundraising &amp; Finance Benchmarks)</inlineHelpText>
    <label>Form 3 FUN Date</label>
    <type>Date</type>
</CustomField>