force-app/main/default/objects/Benchmark__c/fields/Form_3_FUN_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_3_FUN_URL__c</fullName>
    <description>FormAssembly Link for most recent Form 3 FUN (Fundraising &amp; Finance Benchmarks)</description>
    <inlineHelpText>FormAssembly Link for most recent Form 3 FUN (Fundraising &amp; Finance Benchmarks)</inlineHelpText>
    <label>Form 3 FUN URL</label>
    <type>Url</type>
</CustomField>