force-app/main/default/objects/Benchmark__c/fields/Form_4_ADV_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_4_ADV_Comments__c</fullName>
    <description>Comments from most recent Form 4 (Communications &amp; Advocacy Benchmarks)</description>
    <inlineHelpText>Comments from most recent Form 4 (Communications &amp; Advocacy Benchmarks)</inlineHelpText>
    <label>Form 4 ADV Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>