force-app/main/default/objects/Benchmark__c/fields/Form_4_ADV_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_4_ADV_Date__c</fullName>
    <description>Submit date of most recent Form 4 ADV (Communications &amp; Advocacy Benchmarks)</description>
    <inlineHelpText>Submit date of most recent Form 4 ADV (Communications &amp; Advocacy Benchmarks)</inlineHelpText>
    <label>Form 4 ADV Date</label>
    <type>Date</type>
</CustomField>