force-app/main/default/objects/Benchmark__c/fields/Form_4_ADV_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_4_ADV_URL__c</fullName>
    <description>FormAssembly Link for most recent Form 4 ADV (Communications &amp; Advocacy Benchmarks)</description>
    <inlineHelpText>FormAssembly Link for most recent Form 4 ADV (Communications &amp; Advocacy Benchmarks)</inlineHelpText>
    <label>Form 4 ADV URL</label>
    <type>Url</type>
</CustomField>