force-app/main/default/objects/Benchmark__c/fields/Staff_Note__c.field-meta.xml
<CustomField>
    <fullName>Staff_Note__c</fullName>
    <description>Temporary note field for internal use. Please add date and initials. Example:  7-16-24 SV</description>
    <inlineHelpText>Temporary note field for internal use. Please add date and initials. Example: 7-16-24 SV</inlineHelpText>
    <label>Staff Note</label>
    <type>TextArea</type>
</CustomField>