force-app/main/default/objects/Benchmark__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Once a benchmark survey is received, this is the path to targeted technical assistance</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Member Input</fullName>
            </value>
            <value>
                <fullName>Plan created</fullName>
            </value>
            <value>
                <fullName>TA Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>