force-app/main/default/objects/Benchmark__c/fields/Su_A_Authority__c.field-meta.xml
<CustomField>
    <fullName>Su_A_Authority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The organization is recognized as a regional authority on diaper need in the context of local poverty issues.</description>
    <inlineHelpText>The organization is recognized as a regional authority on diaper need in the context of local poverty issues.</inlineHelpText>
    <label>Su-A Authority</label>
    <type>Checkbox</type>
</CustomField>