force-app/main/default/objects/Benchmark__c/fields/Su_A_National_Local__c.field-meta.xml
<CustomField>
    <fullName>Su_A_National_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participation in national level initiatives translates into local level activities. Member incorporates NDBN&apos;s national initiatives into local activities, leveraging NDBN programs (DNAW) or resources (such as donated product, grants, or published materials) to increase financial support and human resources locally.</description>
    <inlineHelpText>Participation in national level initiatives translates into local level activities.</inlineHelpText>
    <label>Su-A_National_Local</label>
    <type>Checkbox</type>
</CustomField>