force-app/main/default/objects/Benchmark__c/fields/Su_A_Representation__c.field-meta.xml
<CustomField>
    <fullName>Su_A_Representation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Community representation is encouraged through strategic collaborations.</description>
    <inlineHelpText>Community representation is encouraged through strategic collaborations.</inlineHelpText>
    <label>Su-A Representation</label>
    <type>Checkbox</type>
</CustomField>