force-app/main/default/objects/Benchmark__c/fields/Su_ADV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Su_ADV_To_Do__c</fullName>
    <description>Number of Sustaining-Level Advocacy Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Su_A_Authority__c, 1, 0) +
IF(Su_A_National_Local__c, 1, 0) +
IF(Su_A_Representation__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Sustaining-Level Advocacy Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Su ADV To-Do	 (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>