force-app/main/default/objects/Benchmark__c/fields/Su_Bench_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Su_Bench_To_Do__c</fullName>
    <description>Total Sustaining Member Benchmarks (of 14) To Do</description>
    <formula>Su_GOV_To_Do__c +
Su_OPS_To_Do__c +
Su_FUN_To_Do__c +
Su_ADV_To_Do__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Sustaining Member Benchmarks (of 14) To Do</inlineHelpText>
    <label>SUSTAINING LEVEL BENCHMARS TO-DO (14)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>