force-app/main/default/objects/Benchmark__c/fields/Su_F_Audit_Review__c.field-meta.xml
<CustomField>
    <fullName>Su_F_Audit_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An annual audit or review is conducted by an independent CPA firm</description>
    <inlineHelpText>An annual audit or review is conducted by an independent CPA firm</inlineHelpText>
    <label>Su-F Audit-Review</label>
    <type>Checkbox</type>
</CustomField>