force-app/main/default/objects/Benchmark__c/fields/Su_F_Funding_Streams__c.field-meta.xml
<CustomField>
    <fullName>Su_F_Funding_Streams__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fundraising team actively receives funding through a variety of types of funding streams.</description>
    <inlineHelpText>Fundraising team actively receives funding through a variety of types of funding streams.</inlineHelpText>
    <label>Su-F Funding Streams</label>
    <type>Checkbox</type>
</CustomField>