force-app/main/default/objects/Benchmark__c/fields/Su_F_GAAP_Comp__c.field-meta.xml
<CustomField>
    <fullName>Su_F_GAAP_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Financial reporting is GAAP compliant.</description>
    <inlineHelpText>Financial reporting is GAAP compliant.</inlineHelpText>
    <label>Su-F GAAP Comp</label>
    <type>Checkbox</type>
</CustomField>