force-app/main/default/objects/Benchmark__c/fields/Su_F_Grants__c.field-meta.xml
<CustomField>
    <fullName>Su_F_Grants__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants are routinely secured and all grant reporting requirements are completed.</description>
    <inlineHelpText>Grants are routinely secured and all grant reporting requirements are completed.</inlineHelpText>
    <label>Su-F Grants</label>
    <type>Checkbox</type>
</CustomField>