force-app/main/default/objects/Benchmark__c/fields/Su_FUN_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Su_FUN_To_Do__c</fullName>
    <description>Number of Sustaining-Level Fundraising and Finance Benchmarks (of 4) Not Yet Demonstrated</description>
    <formula>4 - (IF(Su_F_Funding_Streams__c, 1, 0) +
IF(Su_F_Grants__c, 1, 0) +
IF(Su_F_GAAP_Comp__c, 1, 0) +
IF(Su_F_Audit_Review__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Sustaining-Level Fundraising and Finance Benchmarks (of 4) Not Yet Demonstrated</inlineHelpText>
    <label>Su FUN To-Do	 (4)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>