force-app/main/default/objects/Benchmark__c/fields/Su_G_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Su_G_Annual_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An annual report is produced and made available to public and stakeholders.</description>
    <inlineHelpText>An annual report is produced and made available to public and stakeholders.</inlineHelpText>
    <label>Su-G Annual Report</label>
    <type>Checkbox</type>
</CustomField>