force-app/main/default/objects/Benchmark__c/fields/Su_G_Nonprofit_Status__c.field-meta.xml
<CustomField>
    <fullName>Su_G_Nonprofit_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nonprofit status: Members must be 501c3 nonprofit organizations.</description>
    <inlineHelpText>Nonprofit status: Members must be 501c3 nonprofit organizations.</inlineHelpText>
    <label>Su-G Nonprofit Status</label>
    <type>Checkbox</type>
</CustomField>