force-app/main/default/objects/Benchmark__c/fields/Su_G_Self_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Su_G_Self_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Board has implemented a mechanism for self-evaluation.</description>
    <inlineHelpText>Board has implemented a mechanism for self-evaluation.</inlineHelpText>
    <label>Su-G Self-Evaluation</label>
    <type>Checkbox</type>
</CustomField>