force-app/main/default/objects/Benchmark__c/fields/Su_G_Staff_Development__c.field-meta.xml
<CustomField>
    <fullName>Su_G_Staff_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provide professional development opportunities and fair market pay rates for staff</description>
    <inlineHelpText>Provide professional development opportunities and fair market pay rates for staff</inlineHelpText>
    <label>Su-G Staff Development</label>
    <type>Checkbox</type>
</CustomField>