force-app/main/default/objects/Benchmark__c/fields/Su_GOV_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Su_GOV_To_Do__c</fullName>
    <description>Number of Sustaining-Level Governance Benchmarks (of 4) Not Yet Demonstrated</description>
    <formula>4 - (IF(Su_G_Staff_Development__c, 1, 0) +
IF(Su_G_Full_Gov__c, 1, 0) +
IF(Su_G_Self_Evaluation__c, 1, 0) +
IF(Su_G_Annual_Report__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Sustaining-Level Governance Benchmarks (of 4) Not Yet Demonstrated</inlineHelpText>
    <label>Su GOV To-Do (4)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>