force-app/main/default/objects/Benchmark__c/fields/Su_O_Data_Systems__c.field-meta.xml
<CustomField>
    <fullName>Su_O_Data_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data system allows for timely sharing of information in order to improve service and allocate resources equitably.</description>
    <inlineHelpText>Data system allows for timely sharing of information in order to improve service and allocate resources equitably.</inlineHelpText>
    <label>Su-O Data Systems</label>
    <type>Checkbox</type>
</CustomField>