force-app/main/default/objects/Benchmark__c/fields/Su_O_Regional_Network__c.field-meta.xml
<CustomField>
    <fullName>Su_O_Regional_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invest financial and other resources to help build the capacity of a regional network of diaper programs and partner agencies through strategic utilization of warehouse space, infrastructure and staffing</description>
    <inlineHelpText>Invest financial and other resources to help build the capacity of a regional network of diaper programs and partner agencies through strategic utilization of warehouse space, infrastructure and staffing</inlineHelpText>
    <label>Su-O Regional Network</label>
    <type>Checkbox</type>
</CustomField>