force-app/main/default/objects/Benchmark__c/fields/Su_O_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Su_O_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Warehouse storage is owned or leased and can receive and store donations for the regional network as well as coordinate trading or reallocating resources.</description>
    <inlineHelpText>Warehouse storage is owned or leased and can receive and store donations for the regional network as well as coordinate trading or reallocating resources.</inlineHelpText>
    <label>Su-O Warehouse</label>
    <type>Checkbox</type>
</CustomField>