force-app/main/default/objects/Benchmark__c/fields/Su_OPS_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Su_OPS_To_Do__c</fullName>
    <description>Number of Sustaining-Level Operations Benchmarks (of 3) Not Yet Demonstrated</description>
    <formula>3 - (IF(Su_O_Warehouse__c, 1, 0) +
IF(Su_O_Data_Systems__c, 1, 0) +
IF(Su_O_Regional_Network__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Sustaining-Level Operations Benchmarks (of 3) Not Yet Demonstrated</inlineHelpText>
    <label>Su OPS To-Do (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>