force-app/main/default/objects/Benchmark__c/fields/Total_Benchmarks_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Total_Benchmarks_To_Do__c</fullName>
    <description>Total remaining benchmarks. Smaller number = greater chance to be a Change Leader.</description>
    <formula>Ex_Bench_To_Do__c +
Em_Bench_To_Do__c +
Su_Bench_To_Do__c +
Ch_Bench_To_Do__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total remaining benchmarks. Smaller number = greater chance to be a Change Leader.</inlineHelpText>
    <label>Total Benchmarks To-Do</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>