force-app/main/default/objects/Benchmark__c/fields/Year_Assessing__c.field-meta.xml
<CustomField>
    <fullName>Year_Assessing__c</fullName>
    <label>Year Assessing</label>
    <length>4</length>
    <type>Text</type>
</CustomField>