force-app/main/default/objects/Benchmark__c/recordTypes/Benchmark_Assess_Nonprofit.recordType-meta.xml
<RecordType>
    <fullName>Benchmark_Assess_Nonprofit</fullName>
    <active>true</active>
    <label>Benchmark Assess Nonprofit</label>
</RecordType>