force-app/main/default/objects/Benchmark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 and 2</booleanFilter>
    <columns>Account__c</columns>
    <columns>BAQ_Date_Submitted__c</columns>
    <columns>NAME</columns>
    <columns>Total_Benchmarks_To_Do__c</columns>
    <columns>Ex_Bench_To_Do__c</columns>
    <columns>Em_Bench_To_Do__c</columns>
    <columns>Su_Bench_To_Do__c</columns>
    <columns>Ch_Bench_To_Do__c</columns>
    <columns>Status__c</columns>
    <columns>Staff_Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BAQ_Date_Submitted__c</field>
        <operation>greaterThan</operation>
        <value>12/15/2020</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>A11</value>
    </filters>
    <label>All</label>
</ListView>